R1-P1: Fixed side script execution

--- a/user/autoexec.cfg
+++ b/user/autoexec.cfg
@@ -61,15 +61,15 @@
 //----------------
 
 	//exec prec		    	//Uncomment if you use P-Rec(TF2 now has a bit worse but functional automatic demo recording built in)
-	//exec scoreboard		//Uncomment to use advanced scoreboard script that pops up the full net graph
-	//exec crouchjump		//Uncomment to enable spacebar automatically performing a crouch jump without having to press your crouch key
+	//exec scoreboard		//Uncomment to use advanced scoreboard script that pops up the full net graph. This only works initially, you have to enable the same setting in each class config as needed.
+	//exec crouchjump		//Uncomment to enable spacebar automatically performing a crouch jump without having to press your crouch key. This only works initially, you have to enable the same setting in each class config as needed.
 							//Note that this is not recommended for high level rocket/sticky jumping as it DOES NOT CTAP PROPERLY
 							//For those who don't main Soldier or Demo, it is very useful for explosion surfing as a means of escape.
 //---------------
 // Mouse settings
 //---------------
 
-	//sensitivity 0.55 	    //Change this to your normal sensitivity, personally I find lower is better for sniper/amby
+	//sensitivity 2.00 	    //Change this to your normal sensitivity, personally I find lower is better for sniper/amby
 				  			//Just never ever change your sensitivity, especially between weapons
 				  			//It really screws with muscle memory if you do that
 //-----------
