--- a/user/heavyweapons.cfg
+++ b/user/heavyweapons.cfg
@@ -142,20 +142,15 @@ unbindall
 	bind kp_minus "incrementvar tf_hud_target_id_disable_floating_health  0 1 1"
 
 // Generic stuff like fov and crosshair, feel free to change / remove any of these	
-	r_drawviewmodel 1
-	viewmodel_fov 90
-	fov_desired 90
-	cl_crosshair_file crosshair3; cl_crosshair_scale 40
-	glow_outline_effect_enable 1
-	cl_showfps 0
 	cl_autoreload 1
-	r_drawtracers_firstperson 0
 	hud_fastswitch 1
 
 // Execute some other configs
 // If you don't have these, comment out these lines or download them from my video description
-	exec nullmove; // The config which lets you strafe without stopping if you press both A and D at the same time
-	exec scoreboard; // The config which shows net_graph and fps and stuff when you hold "tab"
+	//exec scoreboard; 		//Uncomment to use advanced scoreboard script that pops up the full net graph.
+	//exec crouchjump; 		//Uncomment to enable spacebar automatically performing a crouch jump without having to press your crouch key.
+							//Note that this is not recommended for high level rocket/sticky jumping as it DOES NOT CTAP PROPERLY
+							//For those who don't main Soldier or Demo, it is very useful for explosion surfing as a means of escape.
 	
 // Some bug fixing buttons, press them if needed.
 	bind "[" hud_reloadscheme // Only reloads hud, fixes some hud related issues
