--- a/scoreboard.cfg
+++ b/scoreboard.cfg
@@ -4,11 +4,11 @@
 
 //When enabled in autoexec.cfg, the following will happen:
 
-//	Press tab to:
+//	Pressing tab will:
 //		Display scoreboard, display netgraph with small text, display fps, display postition/speed, display errors
 
-//	Relese tab to:
-//		Disable all of these again
+//	Releasing tab will:
+//		Disable all of these again as normal
 
 bind tab "+scoreboard"
 alias +scoreboard "+showscores;net_graph 4;cl_showerror 1;cl_showpos 1;net_graphtext 1;cl_showfps 1;net_graphproportionalfont 0"
