--- a/crouchjump.cfg
+++ b/crouchjump.cfg
@@ -6,6 +6,7 @@
 //Stolen off the internet somewhere.
 //This used to be the nullmove script, but since that comes as an option in MasterComfig, that is recommended.
 //Feel free to change space to just +duck / -duck if you dont like it.
+//Please note that this is not recommended for Solider/Demo mains as it does not ctap properly.
 
 bind space "+crouchjump;"		  //if you want to jump normally:
 alias +crouchjump "+jump;+duck"   //remove +duck
