--- a/notalk.cfg
+++ b/notalk.cfg
@@ -2,7 +2,7 @@
 // Woolen's Chat Disable Config \\
 //------------------------------\\
 
-//Some custom HUDs have these functions built into their main menus
+//Some custom HUDs have these functions built into their main menus, though not always both.
 
 //Disable chat and voice
 hud_saytext_time 0;
