--- a/talk.cfg
+++ b/talk.cfg
@@ -2,7 +2,7 @@
 // Woolen's Chat Enable Config \\
 //------------------------------\\
 
-//Some custom HUDs have these functions built into their main menus
+//Some custom HUDs have these functions built into their main menus, though not always both.
 
 //Enable chat and voice
 hud_saytext_time 12;
