--- a/user/autoexec.cfg
+++ b/user/autoexec.cfg
@@ -41,7 +41,7 @@
 // Networking stuff 
 // ---------------
  
-// Don't mess with them unless you know what you're doing, MasterComfig has most of these covered for most users, uncomment and alter what you need only.
+// Don't mess with them unless you know what you're doing, MasterComfig has most of these covered for most users, uncomment and alter what you need only for your playstyle and specific needs.
  
 	//cl_cmdrate 67 //some configs have these on 66, doesn't really matter though
 	//cl_updaterate 67 //just keep these as the same number
@@ -83,7 +83,7 @@
 	fov_desired 90 									//Everyone should use 90 FOV, no excuses "Mr. Some-counter-strike-1.6-pros-use-it"
 	tf_hud_target_id_disable_floating_health 1; 	//Disable floating health, this will also disable floating health on MvM bosses
 	alias "r" "incrementvar mat_aaquality 0 1 1"	//Refreshes main menu for HUD editing when you type 'r' into console
-	cl_hud_playerclass_use_playermodel 0			//Disables 3D playermodel. MasterComfig has this option, but I left this here as a backup for HUD editing.
+	//cl_hud_playerclass_use_playermodel 0			//Disables 3D playermodel. MasterComfig has this option, but I left this here as a backup for HUD editing.
 	
 //Disable voice + chat
 	//If you have my "talk" and "notalk" configs you can type:
