Git signed commit test, clarifications of some more data again

--- a/user/autoexec.cfg
+++ b/user/autoexec.cfg
@@ -69,7 +69,7 @@
 // Mouse settings
 //---------------
 
-	//sensitivity 2.00 	    //Change this to your normal sensitivity, personally I find lower is better for sniper/amby
+	//sensitivity 2.00 	    //Change this to your normal sensitivity, personally I find lower is better for sniper/amby, take your time finding the right one.
 				  			//Just never ever change your sensitivity, especially between weapons
 				  			//It really screws with muscle memory if you do that
 //-----------
