--- a/user/sniper.cfg
+++ b/user/sniper.cfg
@@ -65,8 +65,8 @@ unbindall
 	bind "PGDN" "spec_prev"
 	bind "PAUSE" "pause"
 	bind "ALT" "+strafe"
-	bind "SHIFT" "+voicerecord"
-	bind "CTRL" "+duck"
+	bind "SHIFT" "+duck"
+	bind "CTRL" "+voicerecord"
 	bind "F1" "load_itempreset 0;"
 	bind "F2" "load_itempreset 1;"
 	bind "F3" "load_itempreset 2;"
