Fixed issues with spacing and grammar in README, added install help, fixed clerical issues

--- a/user/autoexec.cfg
+++ b/user/autoexec.cfg
@@ -6,7 +6,7 @@
 //Contact Woolen at any of these:
 // 		YouTube: www.youtube.com/user/TheBoy7477 
 // 		Twitter: www.twitter.com/WoolenSleevelet
-// 		Discord: www.discord.gg/8FNrdFR
+// 		Discord: https://discord.gg/woolen
 
 //Contact Jötunn here:
 //		Discord: www.discord.gg/NhnSysw
@@ -114,4 +114,4 @@
 	tf_matchmaking_ping_b 75f
 	tf_matchmaking_ping_c 100f
 	
-echo "***Woolen's cleaned autoexec loaded!***"
+echo "***Woolen's updated autoexec loaded!***"
