--- a/crouchjump.cfg
+++ b/crouchjump.cfg
@@ -7,6 +7,7 @@
 //This used to be the nullmove script, but since that comes as an option in MasterComfig, that is recommended.
 //Feel free to change space to just +duck / -duck if you dont like it.
 //Please note that this is not recommended for Solider/Demo mains as it does not ctap properly.
+//This is enabled in a class-by-class basis at the bottom of each class config file by uncommenting "//exec crouchjump"
 
 bind space "+crouchjump;"		  //if you want to jump normally:
 alias +crouchjump "+jump;+duck"   //remove +duck
