Updated recommended launch options to be inline with actual known good ones

--- a/user/autoexec.cfg
+++ b/user/autoexec.cfg
@@ -6,7 +6,7 @@
 //Contact Woolen at any of these:
 // 		YouTube: www.youtube.com/user/TheBoy7477 
 // 		Twitter: www.twitter.com/WoolenSleevelet
-// 		Discord: https://discord.gg/woolen
+// 		Discord: www.discord.gg/8FNrdFR
 
 //Contact Jötunn here:
 //		Discord: www.discord.gg/NhnSysw
@@ -19,8 +19,7 @@
 
 //Jöt's note: I have altered and added to this to work better with MasterComfig,
 //as well as making it easier to use for editing a custom HUD. Aside from that,
-//grammar mistakes in the notes were cleaned up, and indentation has been evened;
-//the math for heapsize has been done for the most common range of RAM capacities.
+//grammar mistakes in the notes were cleaned up, and indentation has been evened.
 //More information has been added to explain functions of code where relevant/useful.
 //I also cleaned up the class configs and their various inconsistencies.
 
@@ -30,31 +29,27 @@
 
 //Open Steam, go to TF2, Right Click > Properties, General, Set Launch Options
 //Remove // (comment markers) before pasting of course	
-	//-noipx -novid -nocrashdialog -nojoy -noborder -precachefontchars -noquicktime -refresh 240 +mat_forcehardwaresync 0 -noforcemaccel -noforcemparms -noforcemspd -heapsize 33554432 -fullscreen
+	//novid -nojoy -nosteamcontroller -nohltv -particles 1 -precachefontchars -noborder -refresh 240
 //Change -refresh 144 if you don't use a 144hz monitor
-//Change -w 1920 -h 1080 if you use a different resolution, remove for testing a custom HUD at various resolutions
-//Change -heapsize based on your RAM capacity: 
-	//4GB: 2097152 - 8GB: 4194304 - 16GB: 8388608 - 24GB: 12582912 - 32GB: 16777216 - 64GB: 33554432
-//Feel free to change -fullscreen to -windowed -noborder if you want to play in borderless windowed mode
 
 // ---------------
 // Networking stuff 
 // ---------------
  
-// Don't mess with them unless you know what you're doing, MasterComfig has most of these covered for most users, uncomment and alter what you need only for your playstyle and specific needs.
+// Don't mess with them unless you know what you're doing, MasterComfig has most of these covered for most users, uncomment and alter what you need only.
  
 	//cl_cmdrate 67 //some configs have these on 66, doesn't really matter though
 	//cl_updaterate 67 //just keep these as the same number
 	//cl_interp_ratio 2
-	//rate 60000 //set it too high and you'll increase your ping, set it too low and you'll drop packets
+	//rate 80000 //set it too high and you'll increase your ping, set it too low and you'll drop packets
 	//cl_lagcompensation 1 
 	//cl_pred_optimize 2
 	//cl_smooth 0 //switch this to 1 if you're making a frag video, 0 if you're playing the game
 	//cl_smoothtime 0.01 //mess with this if you're making a frag video for smoothing effects
  
 //Pick one of these 2 to use, doesn't really matter which, just stick with it from now on.
-	//cl_interp 0.035 // Forgiving buffer between you and server, useful for hitscan like amby/sniper rifle
-	//cl_interp 0.0152 // As close as possible to server, good for knife/projectiles
+	//cl_interp 0.0303 // Default Interp setting; Forgiving buffer between you and server, useful for hitscan like amby/sniper rifle
+	//cl_interp 0.0152 // As close as possible to server, good for knife/projectiles. Take care when using this, it does come with issues: https://docs.mastercomfig.com/9.5.2/tf2/misconceptions/#bad-cvars
 	
 //----------------
 // Execute configs
@@ -69,7 +64,7 @@
 // Mouse settings
 //---------------
 
-	//sensitivity 2.00 	    //Change this to your normal sensitivity, personally I find lower is better for sniper/amby, take your time finding the right one.
+	//sensitivity 2.00 	    //Change this to your normal sensitivity, personally I find lower is better for sniper/amby
 				  			//Just never ever change your sensitivity, especially between weapons
 				  			//It really screws with muscle memory if you do that
 //-----------
@@ -83,7 +78,7 @@
 	fov_desired 90 									//Everyone should use 90 FOV, no excuses "Mr. Some-counter-strike-1.6-pros-use-it"
 	tf_hud_target_id_disable_floating_health 1; 	//Disable floating health, this will also disable floating health on MvM bosses
 	alias "r" "incrementvar mat_aaquality 0 1 1"	//Refreshes main menu for HUD editing when you type 'r' into console
-	//cl_hud_playerclass_use_playermodel 0			//Disables 3D playermodel. MasterComfig has this option, but I left this here as a backup for HUD editing.
+	cl_hud_playerclass_use_playermodel 0			//Disables 3D playermodel. MasterComfig has this option, but I left this here as a backup for HUD editing.
 	
 //Disable voice + chat
 	//If you have my "talk" and "notalk" configs you can type:
@@ -114,4 +109,4 @@
 	tf_matchmaking_ping_b 75f
 	tf_matchmaking_ping_c 100f
 	
-echo "***Woolen's updated autoexec loaded!***"
+echo "***Woolen's cleaned autoexec loaded!***"
