Updated engineer autobuild
Made it simply bring up sentry, and have player left click to place.

Signed-off-by: Nicolas <nicolas.angelini@gmail.com>

--- a/user/engineer.cfg
+++ b/user/engineer.cfg
@@ -115,8 +115,8 @@ unbindall
 	alias "-melwep" "-attack"
 
 // Fast Build Sentry (Hold mouse4 to quickly build a mini sentry)
-	alias +sentry "destroy 2 0; build 2 0; +attack"
-	alias -sentry "-attack;lastinv"
+	alias +sentry "destroy 2 0; build 2 0"
+	alias -sentry "lastinv"
 
 // Eureka Effect 
 // Press Q to go to spawn
