Fixed inspect binds

--- a/user/demoman.cfg
+++ b/user/demoman.cfg
@@ -28,7 +28,7 @@ unbindall
 	bind "c" "voice_menu_3"
 	bind "d" "+moveright"
 	bind "e" ""
-	bind "f" "inspect"
+	bind "f" "+inspect"
 	bind "g" "+taunt"
 	bind "h" "+use_action_slot_item"
 	bind "i" "showmapinfo"
