--- a/config.cfg
+++ b/config.cfg
@@ -62,6 +62,7 @@ bind "ESCAPE" "cancelselect"
 bind "INS" "+klook"
 bind "DEL" "+jump"
 bind "END" "explode"
+bind "HOME" "kill"
 bind "PGUP" "spec_next"
 bind "PGDN" "spec_prev"
 bind "PAUSE" "pause"
