--- a/overrides/engineer.cfg
+++ b/overrides/engineer.cfg
@@ -1,6 +1,6 @@
-//-------------------------\\
-// Woolen's Demoman Config \\
-//-------------------------\\
+//--------------------------\\
+// Woolen's Engineer Config \\
+//--------------------------\\
 
 //--------------------------------
 // Resetting Binds  
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -93,12 +94,14 @@ unbindall
 	bind KP_PGUP "join_class spy"
 	
 //--------------------------------
-// Demo specific stuff
+// Engineer specific stuff
 //--------------------------------
 
-// Very basic script, pretty much functions the same as TF2 default
-// Scroll up to grenades, scroll down to stickies, middle click to melee
-// Left mouse to shoot, right mouse to detonate stickies
+// Pretty normal setup here
+// Left click to shoot / place buildings, right click to pick up buildings
+// Scroll up for shotgun, scroll down for pistol, middle click for wrench
+// Mouse 4 to quick place a sentry, Q for eureka effect teleporting
+// Read below about how eureka effect script works
 
 // Primary Attack
 	alias "+primatck" "+attack"
@@ -111,19 +114,32 @@ unbindall
 // Melee Weapon 
 	alias "+melwep" "slot3;+attack"
 	alias "-melwep" "-attack"
-	
-// Regular Jump (Crouchjumping messes with some sticky jumps)
-	alias "+normjump" "+jump"
-	alias "-normjump" "-jump"
-	
+
+// Fast Build Sentry (Hold mouse4 to quickly build a mini sentry)
+	alias +sentry "destroy 2 0; build 2 0"
+	alias -sentry "lastinv"
+
+// Eureka Effect 
+// Press Q to go to spawn
+// Crouch and Press Q to go to teleporter exit
+
+	alias "eureka" "slot3; eureka_teleport"
+	alias "eureka2" "slot3; eureka_teleport 1"
+
+	alias +crouch "+duck; bind q eureka2"
+	alias -crouch "-duck; bind q eureka"
+
 
 // Feel free to change the keys these are bound to!
 	bind "mouse1" "+primatck"
 	bind "mouse2" "+secatack"
-	bind "mouse3" "+melwep"
-	bind "mouse4" "+normjump"
 	bind "mwheelup" "slot1"
 	bind "mwheeldown" "slot2"
+	bind "mouse3" "slot3"
+	bind "mouse4" "+sentry"
+	bind "shift" "+crouch"
+	bind "q" "eureka"
+
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
