--- a/overrides/medic.cfg
+++ b/overrides/medic.cfg
@@ -1,6 +1,6 @@
-//------------------------\\
-// Woolen's Sniper Config \\
-//------------------------\\
+//-----------------------\\
+// Woolen's Medic Config \\
+//-----------------------\\
 
 //--------------------------------
 // Resetting Binds  
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -93,45 +94,63 @@ unbindall
 	bind KP_PGUP "join_class spy"
 	
 //--------------------------------
-// Sniper specific stuff
+// Medic specific stuff
 //--------------------------------
 
-// Pretty normal stuff
-// Left click to shoot, right click to scope
-// Mouse up / click to switch to rifle, mouse down to melee
-// Hold mouse5 to throw jarate and go back to rifle
-// Hold mouse4 to swing melee and go back to rifle
-// Press "2" to switch to jarate normally if you want time to aim
+// This is basically just Chris' Competitive Medic Script
+// Pretty confusing at first, but once you get used to it its hard to live without
+// Left click to heal, Right click to crossbow, Middle click to ubersaw
+// Mouse 4 to actually use ubercharge, "Q" to fake using ubercharge
+// Press "F" to use a random quiet voiceline to cover up the I AM FULLY CHARGED line
+// If you pull out your crossbow it should show you where your nearby teammates are
 
-// Primary Attack
-	alias "+primatck" "+attack"
-	alias "-primatck" "-attack"
 
-// Secondary Attack 
-	alias "+secatack" "+attack2"
-	alias "-secatack" "-attack2"
+// Auto call changer
+	alias "autocall_initial" "hud_medicautocallersthreshold "50"" // Normal autocall percentage
+	alias "autocall_temp" "hud_medicautocallersthreshold "150"" // Crossbow out autocall percentage
+	alias "+autocall_temp_hit" "autocall_temp"
+	alias "-autocall_temp_hit" "autocall_initial"
 
-// Melee Attack
-	alias "+melee" "slot3;+attack;r_drawviewmodel 1"
-	alias "-melee" "slot1;-attack;r_drawviewmodel 1"
+// Medigun/kritzkrieg
+	alias "+heal" "slot2;+attack;autocall_initial"
+	alias "-heal" "-attack"
 
-// Jarate
-	alias "+jarate" "slot2;+attack"
-	alias "-jarate" "slot1;-attack"
-	
-// Don't rezoom after shooting by default
-	cl_autorezoom 0
-// Press + on numpad to enable rezooming (Good in MvM)
-	bind kp_plus "incrementvar cl_autorezoom 0 1 1"
-	
+// Syringe gun/blutsauger
+	alias "+needles" "slot1;+attack;autocall_temp"
+	alias "-needles" "-attack"
+
+// Bonesaw/ubersaw
+	alias "+saw" "slot3;+attack;autocall_temp"
+	alias "-saw" "-attack"
+
+// Uber and notification
+	alias "+uber" "slot2;dropitem;+attack2;say_team *UBERCHARGE_!!!USED!!!*;voicemenu 2 3;autocall_initial"
+	alias "-uber" "-attack2;"
+
+// Fake uber and notification
+	alias "fakeuber" "voicemenu 1 7; say_team *UBERCHARGE_FAKED*"
+
+// Random Voice
+	alias "randomvoice" "random1"
+	alias "random1" "voicemenu 2 1;alias randomvoice random2;"
+	alias "random2" "voicemenu 2 2;alias randomvoice random3;"
+	alias "random3" "voicemenu 2 3;alias randomvoice random4;"
+	alias "random4" "voicemenu 2 4;alias randomvoice random5;"
+	alias "random5" "voicemenu 2 5;alias randomvoice random6;"
+	alias "random6" "voicemenu 2 6;alias randomvoice random7;"
+	alias "random7" "voicemenu 2 7;alias randomvoice random1;"
+
+// I dont know what these are but they scare me so i'm leaving them in 
+	alias "slot1bind" "slot1;autocall_temp"
+	alias "slot2bind" "slot2;autocall_initial"
+
 // Feel free to change the keys these are bound to!
-	bind "mouse1" "+primatck"
-	bind "mouse2" "+secatack"
-	bind "mouse5" "+jarate"
-	bind "mouse4" "+melee"
-	bind "mouse3" "slot1"
-	bind "mwheelup" "slot1"
-	bind "mwheeldown" "slot3"	
+	bind "mouse1" "+heal"
+	bind "mouse2" "+needles"
+	bind "mouse3" "+saw"
+	bind "mouse4" "+uber"
+	bind f "randomvoice"
+	bind "q" "fakeuber"
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
