--- a/overrides/pyro.cfg
+++ b/overrides/pyro.cfg
@@ -1,6 +1,6 @@
-//-----------------------\\
-// Woolen's Medic Config \\
-//-----------------------\\
+//----------------------\\
+// Woolen's Pyro Config \\
+//----------------------\\
 
 //--------------------------------
 // Resetting Binds  
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -91,65 +92,42 @@ unbindall
 	bind KP_HOME "join_class medic"
 	bind KP_UPARROW "join_class sniper"
 	bind KP_PGUP "join_class spy"
+
+//--------------------------------
+// Pyro specific stuff
+//--------------------------------
+
+// Probably my most non-default binding setup
+// Mouse1 to switch to + shoot flamethrower, Mouse2 to switch to flamethrower + airblast
+// Mouse4 to shotgun, Mouse3 to melee, Mouse5 to use detonator
+
+// Primary Weapon
+	alias "+primwep" "slot1;+attack"
+	alias "-primwep" "-attack"
+
+// Secondary Weapon 
+	alias "+secwep" "slot2;+attack"
+	alias "-secwep" "-attack"
+
+// Melee Weapon 
+	alias "+melwep" "slot3;+attack"
+	alias "-melwep" "-attack"
 	
-//--------------------------------
-// Medic specific stuff
-//--------------------------------
-
-// This is basically just Chris' Competitive Medic Script
-// Pretty confusing at first, but once you get used to it its hard to live without
-// Left click to heal, Right click to crossbow, Middle click to ubersaw
-// Mouse 4 to actually use ubercharge, "Q" to fake using ubercharge
-// Press "F" to use a random quiet voiceline to cover up the I AM FULLY CHARGED line
-// If you pull out your crossbow it should show you where your nearby teammates are
-
-
-// Auto call changer
-	alias "autocall_initial" "hud_medicautocallersthreshold "50"" // Normal autocall percentage
-	alias "autocall_temp" "hud_medicautocallersthreshold "150"" // Crossbow out autocall percentage
-	alias "+autocall_temp_hit" "autocall_temp"
-	alias "-autocall_temp_hit" "autocall_initial"
-
-// Medigun/kritzkrieg
-	alias "+heal" "slot2;+attack;autocall_initial"
-	alias "-heal" "-attack"
-
-// Syringe gun/blutsauger
-	alias "+needles" "slot1;+attack;autocall_temp"
-	alias "-needles" "-attack"
-
-// Bonesaw/ubersaw
-	alias "+saw" "slot3;+attack;autocall_temp"
-	alias "-saw" "-attack"
-
-// Uber and notification
-	alias "+uber" "slot2;dropitem;+attack2;say_team *UBERCHARGE_!!!USED!!!*;voicemenu 2 3;autocall_initial"
-	alias "-uber" "-attack2;"
-
-// Fake uber and notification
-	alias "fakeuber" "voicemenu 1 7; say_team *UBERCHARGE_FAKED*"
-
-// Random Voice
-	alias "randomvoice" "random1"
-	alias "random1" "voicemenu 2 1;alias randomvoice random2;"
-	alias "random2" "voicemenu 2 2;alias randomvoice random3;"
-	alias "random3" "voicemenu 2 3;alias randomvoice random4;"
-	alias "random4" "voicemenu 2 4;alias randomvoice random5;"
-	alias "random5" "voicemenu 2 5;alias randomvoice random6;"
-	alias "random6" "voicemenu 2 6;alias randomvoice random7;"
-	alias "random7" "voicemenu 2 7;alias randomvoice random1;"
-
-// I dont know what these are but they scare me so i'm leaving them in 
-	alias "slot1bind" "slot1;autocall_temp"
-	alias "slot2bind" "slot2;autocall_initial"
+// Activate Secondary Attack (Ensures you have secondary out, detonates)
+	alias "+altfire" "slot2; +attack2"
+	alias "-altfire" "-attack2"
+	
+// Airblast (Switches to flamethrower, airblasts)
+	alias "+airblast" "slot1;+attack2"
+	alias "-airblast" "-attack2"
 
 // Feel free to change the keys these are bound to!
-	bind "mouse1" "+heal"
-	bind "mouse2" "+needles"
-	bind "mouse3" "+saw"
-	bind "mouse4" "+uber"
-	bind f "randomvoice"
-	bind "q" "fakeuber"
+	bind "mouse1" "+primwep"
+	bind "mouse2" "+airblast" 
+	bind "mouse3" "+altfire"
+	bind "mouse4" "+secwep"
+	bind "mouse5" "+melwep"
+
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
