--- a/overrides/scout.cfg
+++ b/overrides/scout.cfg
@@ -1,5 +1,5 @@
 //-----------------------\\
-// Woolen's Heavy Config \\
+// Woolen's Scout Config \\
 //-----------------------\\
 
 //--------------------------------
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -91,42 +92,37 @@ unbindall
 	bind KP_HOME "join_class medic"
 	bind KP_UPARROW "join_class sniper"
 	bind KP_PGUP "join_class spy"
-	
+
 //--------------------------------
-// Heavy specific stuff
+// Scout specific stuff
 //--------------------------------
 
-// Very basic script, pretty much functions the same as TF2 default
-// Left click to shoot, right click to spin up / throw sandvich
-// Scroll up to sandvich, Scroll down to fists, Middle click to minigun
-// Mouse5 to throw sandvich, Mouse4 to eat sandvich (with single key presses)
+// Primary Weapon
+	alias "+primwep" "slot1;+attack"
+	alias "-primwep" "-attack"
 
+// Secondary Weapon 
+	alias "+secwep" "slot2;+attack"
+	alias "-secwep" "-attack"
 
-// Primary Attack
-	alias "+primatck" "+attack"
-	alias "-primatck" "-attack"
-
-// Secondary Attack 
-	alias "+secatack" "+attack2"
-	alias "-secatack" "-attack2"	
-
-// Throw Sandvich 
-	alias "+throw" "slot2; +attack2"
-	alias "-throw" "slot1; -attack2"	
+// Melee Weapon 
+	alias "+melwep" "slot3;+attack"
+	alias "-melwep" "-attack"
 	
-// Eat Sandvich 
-	alias "+nom" "slot2; +attack"
-	alias "-nom" "slot1; -attack"	
+// Activate Secondary Attack (Sandman/soda popper)
+	alias "+altfire" "+attack2"
+	alias "-altfire" "-attack2"
 	
+// Milk (Switches to milk, throws, switches to scattergun)
+	alias "+milk" "slot2;+attack"
+	alias "-milk" "slot1;-attack"
 
 // Feel free to change the keys these are bound to!
-	bind "mouse1" "+primatck"
-	bind "mouse2" "+secatack"
-	bind "mouse4" "+throw"
-	bind "mouse5" "+nom"
-	bind "mouse3" "slot1"
-	bind "mwheelup" "slot2"
-	bind "mwheeldown" "slot3"
+	bind "mouse1" "+primwep"
+	bind "mouse2" "+secwep"
+	bind "mouse3" "+melwep"
+	bind "mouse4" "+altfire"
+	bind "mouse5" "+milk"
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
