--- a/overrides/sniper.cfg
+++ b/overrides/sniper.cfg
@@ -1,6 +1,6 @@
-//--------------------------\\
-// Woolen's Engineer Config \\
-//--------------------------\\
+//------------------------\\
+// Woolen's Sniper Config \\
+//------------------------\\
 
 //--------------------------------
 // Resetting Binds  
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -93,14 +94,15 @@ unbindall
 	bind KP_PGUP "join_class spy"
 	
 //--------------------------------
-// Engineer specific stuff
+// Sniper specific stuff
 //--------------------------------
 
-// Pretty normal setup here
-// Left click to shoot / place buildings, right click to pick up buildings
-// Scroll up for shotgun, scroll down for pistol, middle click for wrench
-// Mouse 4 to quick place a sentry, Q for eureka effect teleporting
-// Read below about how eureka effect script works
+// Pretty normal stuff
+// Left click to shoot, right click to scope
+// Mouse up / click to switch to rifle, mouse down to melee
+// Hold mouse5 to throw jarate and go back to rifle
+// Hold mouse4 to swing melee and go back to rifle
+// Press "2" to switch to jarate normally if you want time to aim
 
 // Primary Attack
 	alias "+primatck" "+attack"
@@ -110,35 +112,27 @@ unbindall
 	alias "+secatack" "+attack2"
 	alias "-secatack" "-attack2"
 
-// Melee Weapon 
-	alias "+melwep" "slot3;+attack"
-	alias "-melwep" "-attack"
+// Melee Attack
+	alias "+melee" "slot3;+attack;r_drawviewmodel 1"
+	alias "-melee" "slot1;-attack;r_drawviewmodel 1"
 
-// Fast Build Sentry (Hold mouse4 to quickly build a mini sentry)
-	alias +sentry "destroy 2 0; build 2 0"
-	alias -sentry "lastinv"
-
-// Eureka Effect 
-// Press Q to go to spawn
-// Crouch and Press Q to go to teleporter exit
-
-	alias "eureka" "slot3; eureka_teleport"
-	alias "eureka2" "slot3; eureka_teleport 1"
-
-	alias +crouch "+duck; bind q eureka2"
-	alias -crouch "-duck; bind q eureka"
-
-
+// Jarate
+	alias "+jarate" "slot2;+attack"
+	alias "-jarate" "slot1;-attack"
+	
+// Don't rezoom after shooting by default
+	cl_autorezoom 0
+// Press + on numpad to enable rezooming (Good in MvM)
+	bind kp_plus "incrementvar cl_autorezoom 0 1 1"
+	
 // Feel free to change the keys these are bound to!
 	bind "mouse1" "+primatck"
 	bind "mouse2" "+secatack"
+	bind "mouse5" "+jarate"
+	bind "mouse4" "+melee"
+	bind "mouse3" "slot1"
 	bind "mwheelup" "slot1"
-	bind "mwheeldown" "slot2"
-	bind "mouse3" "slot3"
-	bind "mouse4" "+sentry"
-	bind "shift" "+crouch"
-	bind "q" "eureka"
-
+	bind "mwheeldown" "slot3"	
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
