--- a/overrides/soldier.cfg
+++ b/overrides/soldier.cfg
@@ -1,6 +1,6 @@
-//----------------------\\
-// Woolen's Pyro Config \\
-//----------------------\\
+//-------------------------\\
+// Woolen's Soldier Config \\
+//-------------------------\\
 
 //--------------------------------
 // Resetting Binds  
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -91,14 +92,13 @@ unbindall
 	bind KP_HOME "join_class medic"
 	bind KP_UPARROW "join_class sniper"
 	bind KP_PGUP "join_class spy"
-
+	
 //--------------------------------
-// Pyro specific stuff
+// Soldier specific stuff
 //--------------------------------
 
-// Probably my most non-default binding setup
-// Mouse1 to switch to + shoot flamethrower, Mouse2 to switch to flamethrower + airblast
-// Mouse4 to shotgun, Mouse3 to melee, Mouse5 to use detonator
+// Left click to rockets, Right click to shotgun, Middle click to melee
+// Mouse5 to charge comangler, Mouse4 to do a normal non crouch-jump
 
 // Primary Weapon
 	alias "+primwep" "slot1;+attack"
@@ -112,21 +112,21 @@ unbindall
 	alias "+melwep" "slot3;+attack"
 	alias "-melwep" "-attack"
 	
-// Activate Secondary Attack (Ensures you have secondary out, detonates)
-	alias "+altfire" "slot2; +attack2"
+// Activate Secondary Attack (Cowmangler)
+	alias "+altfire" "+attack2"
 	alias "-altfire" "-attack2"
 	
-// Airblast (Switches to flamethrower, airblasts)
-	alias "+airblast" "slot1;+attack2"
-	alias "-airblast" "-attack2"
+// Regular Jump (Crouchjumping messes with some rocket jumps)
+	alias "+normjump" "+jump"
+	alias "-normjump" "-jump"
 
 // Feel free to change the keys these are bound to!
 	bind "mouse1" "+primwep"
-	bind "mouse2" "+airblast" 
-	bind "mouse3" "+altfire"
-	bind "mouse4" "+secwep"
-	bind "mouse5" "+melwep"
-
+	bind "mouse2" "+secwep"
+	bind "mouse3" "+melwep"
+	bind "mouse4" "+normjump"
+	bind "mouse5" "+altfire"
+	
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
