--- a/overrides/spy.cfg
+++ b/overrides/spy.cfg
@@ -1,6 +1,6 @@
-//-------------------------\\
-// Woolen's Soldier Config \\
-//-------------------------\\
+//---------------------\\
+// Woolen's Spy Config \\
+//---------------------\\
 
 //--------------------------------
 // Resetting Binds  
@@ -60,6 +60,7 @@ unbindall
 	bind "ESCAPE" "cancelselect"
 	bind "INS" "+klook"
 	bind "END" "explode"
+	bind "HOME" "kill"
 	bind "DEL" "+jump"
 	bind "PGUP" "spec_next"
 	bind "PGDN" "spec_prev"
@@ -93,39 +94,49 @@ unbindall
 	bind KP_PGUP "join_class spy"
 	
 //--------------------------------
-// Soldier specific stuff
+// Spy specific stuff
 //--------------------------------
 
-// Left click to rockets, Right click to shotgun, Middle click to melee
-// Mouse5 to charge comangler, Mouse4 to do a normal non crouch-jump
+// Cool shit right here
+// Left click to shoot/stab, right click for invis/deadringer
+// Mousewheel up to switch to gun, mousewheel down for knife
+// Hold mouse5 to pull out and use sapper, let go to switch back to last weapon
+// Press 5 a bunch to change to enemy medic and pull out medigun (to check what they are running)
+// Press 6 to change to friendly scout (for cart pushing and being with your team)
+// Press mouse4 to change to an enemy scout (small model+weapon for sneaky decloaks especially when you crouch, no speed loss, your actual hitbox does not change to match scout hitbox so snipers have to shoot above your scout disguise head to hit your spy one)
+// Press Q to undisguise (quickly cap a point/cart / show your spychecking teammate you are on their team)
+// Press mousewheel and scroll down repeatedly for satisfying knife animation (best part of the script)
 
-// Primary Weapon
-	alias "+primwep" "slot1;+attack"
-	alias "-primwep" "-attack"
+// Primary Attack
+	alias "+primatck" "+attack"
+	alias "-primatck" "-attack"
 
-// Secondary Weapon 
-	alias "+secwep" "slot2;+attack"
-	alias "-secwep" "-attack"
+// Secondary Attack
+	alias "+secatack" "+attack2"
+	alias "-secatack" "-attack2"
 
-// Melee Weapon 
-	alias "+melwep" "slot3;+attack"
-	alias "-melwep" "-attack"
+// Sapper
+	alias "+sapper" "slot2;+attack"
+	alias "-sapper" "lastinv;-attack"
 	
-// Activate Secondary Attack (Cowmangler)
-	alias "+altfire" "+attack2"
-	alias "-altfire" "-attack2"
-	
-// Regular Jump (Crouchjumping messes with some rocket jumps)
-	alias "+normjump" "+jump"
-	alias "-normjump" "-jump"
+// Quick Disguises
+	alias "checkmedigun" "slot2; disguise 5 -1"
+	alias "friendlyscout" "disguise 1 -2"
+	alias "enemyscout" "disguise 1 -1"
+	alias "undisguise" "disguise 8 -2"
 
 // Feel free to change the keys these are bound to!
-	bind "mouse1" "+primwep"
-	bind "mouse2" "+secwep"
-	bind "mouse3" "+melwep"
-	bind "mouse4" "+normjump"
-	bind "mouse5" "+altfire"
+	bind "mouse1" "+primatck"
+	bind "mouse2" "+secatack"
+	bind "mouse3" "lastinv" 
+	bind "mouse5" "+sapper"
+	bind "mwheelup" "slot1"
+	bind "mwheeldown" "slot3"
 	
+	bind "q" "undisguise"
+	bind "5" "checkmedigun"
+	bind "6" "friendlyscout"
+	bind "mouse4" "enemyscout"
 
 // If you don't have a 5 button mouse you should rebind
 //   any "mouse4" and "mouse5" actions to another key
