--- a/overrides/engineer.cfg
+++ b/overrides/engineer.cfg
@@ -137,7 +137,7 @@ unbindall
 	bind "mwheeldown" "slot2"
 	bind "mouse3" "slot3"
 	bind "mouse4" "+sentry"
-	bind "shift" "+crouch"
+	bind "e" "+crouch"
 	bind "q" "eureka"
 
 
