--- a/overrides/engineer.cfg
+++ b/overrides/engineer.cfg
@@ -115,11 +115,25 @@ unbindall
 	alias "+melwep" "slot3;+attack"
 	alias "-melwep" "-attack"
 
-// Fast Build Sentry (Hold mouse4 to quickly build a mini sentry)
+// Fast Build Scripts/Dane Scripts: Press and hold the given button (mouse4 for sentry, 4 for dispenser, 5 for tele entrance, 6 for tele exit, to destroy the existing one, bring up blueprints for a new one. Followed by either clicking mouse1 to build, or releasing the button to cancel. Change bindings in the binds section below.
+
+// Fast Build Sentry
 	alias +sentry "destroy 2 0; build 2 0"
 	alias -sentry "lastinv"
 
-// Eureka Effect 
+//Fast Build Dispenser (Same operation as above, but for dispensers)
+	alias +dispenser "destroy 0 0; build 0 0"
+	alias -dispenser "lastinv"
+
+//Fast Build Entrance (Ditto, but Tele Entrance)
+	alias +entrance "destroy 1 0; build 1 0"
+	alias -entrance "lastinv"
+
+//Fast Build Exit (Ditto, but Tele Exit)
+	alias +exit "destroy 1 1; build 1 1"
+	alias -exit "lastinv"
+
+// Eureka Effect
 // Press Q to go to spawn
 // Crouch and Press Q to go to teleporter exit
 
@@ -137,6 +151,9 @@ unbindall
 	bind "mwheeldown" "slot2"
 	bind "mouse3" "slot3"
 	bind "mouse4" "+sentry"
+	bind "4" "+dispenser"
+	bind "5" "+entrance"
+	bind "6" "+exit"
 	bind "e" "+crouch"
 	bind "q" "eureka"
 
