--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -84,7 +84,15 @@
 	//If you have my "talk" and "notalk" configs you can type:
 	//"exec talk" in console to enable again
 	//"exec notalk" in console to disable again
-	//Some custom HUDs have these built into their menus.
+
+//Disable voice + chat
+//Type "toggle_talk" in console to toggle on/off, or "talk" for on, or "notalk" for off
+//You can add cl_enable_text_chat 0 to disable the ability to type
+//Some custom HUDs have these built into their menus, making this redundant.
+	alias toggle_talk notalk
+	alias talk "hud_saytext_time 12; voice_modenable 1; cl_enable_text_chat 1; alias toggle_talk notalk"
+	alias notalk "hud_saytext_time 0; voice_modenable 0; cl_enable_text_chat 0; alias toggle_talk talk"
+	talk
 
 //Access inventory / drop items from console by typing these commands in
 	alias "drop" "cl_trigger_first_notification";
