--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -79,6 +79,7 @@
 	tf_hud_target_id_disable_floating_health 1; 	//Disable floating health, this will also disable floating health on MvM bosses
 	alias "r" "incrementvar mat_aaquality 0 1 1"	//Refreshes main menu for HUD editing when you type 'r' into console
 	//cl_hud_playerclass_use_playermodel 0			//Disables 3D playermodel. MasterComfig has this option, but I left this here as a backup for HUD editing.
+	//vgui_ui_scale_factor 0.5						//Sets the HUD font scaling of monitors above 1080p height to that of a 1080p monitor, fixing in game chat, console, and server browser text sizes. USE ONLY IF ON 1440p OR ABOVE!
 	
 //Disable voice + chat
 	//If you have my "talk" and "notalk" configs you can type:
